package edu.hitsz.basic;

public interface Observer {
    /**
     * 对炸弹道具的反应
     */
    void update();
}
